--- a/style.css
+++ b/style.css
@@ -228,16 +228,16 @@ s {
 }
 
 .Our_mission {
-    background: linear-gradient(to bottom, #1A4C6E 0%, #000000 100%);
-    border: 5px solid;
-    border-image: linear-gradient(to bottom, #3380B3 0%, #000000 95%, #000000 100%) 1;
+    background-color: #505050;
     color: white;
-    height: 550px;
+    height: 480px;
     width: 500px;
     text-align: center;
     font-size: 56px;
     position: absolute;
-    top: 225px;
+    top: 360px;
+    left: 25px;
+    border-radius: 50px;
 }
 
 
@@ -272,7 +272,7 @@ s {
     position: absolute;
     top: 600px;
     left: 515px;
-    background-color: #3380B3;
+    background-color: white;
 }
 
 .about_us_hr {
@@ -286,7 +286,7 @@ s {
     position: absolute;
     left: 570px;
     top: 360px;
-    background: linear-gradient(to bottom, #1A4C6E, #3380B3);
+    background-color: #505050;
     color: white;
     border-radius: 50px;
     padding: 20px;
@@ -298,7 +298,7 @@ s {
     position: absolute;
     left: 850px;
     top: 630px;
-    background: linear-gradient(to bottom, #3380B3, #1A4C6E);
+    background-color: #505050;
     color: white;
     border-radius: 50px;
     padding: 20px;
@@ -310,7 +310,7 @@ s {
     position: absolute;
     left: 1130px;
     top: 360px;
-    background: linear-gradient(to bottom, #1A4C6E, #3380B3);
+    background-color: #505050;
     color: white;
     border-radius: 50px;
     padding: 20px;
@@ -322,7 +322,7 @@ s {
     position: absolute;
     left: 1410px;
     top: 630px;
-    background: linear-gradient(to bottom, #3380B3, #1A4C6E);
+    background-color: #505050;
     color: white;
     border-radius: 50px;
     padding: 20px;
@@ -372,21 +372,18 @@ s {
 .intro {
     color: black;
     font-size: 68px;
-    width: fit-content;
     background-color: white;
-    border-radius: 25px;
     padding: 20px;
+    text-align: center;
 }
 
 .contacts {
-    background: linear-gradient(to bottom, white 0%, gray 40%, black 100%);
-    border: 5px solid;
-    border-image: linear-gradient(to bottom, white, black) 1;
+    background-color: black;
     width: 1300px;
     height: 1000px;
     position: absolute;
-    left: 500px;
-    top: 200px;
+    left: 300px;
+    top: 375px;
     text-align: center;
     color: white;
 }
@@ -402,6 +399,7 @@ s {
 .contacts a {
     font-size: 28px;
     color: white;
+    text-decoration: none;
     transition: font-size 0.2s ease;
 }
 
@@ -413,7 +411,7 @@ s {
     position: relative;
     left: 20px;
     top: 20px;
-    background: linear-gradient(to bottom, gray, black);
+    background-color: #505050;
     width: 350px;
     height: 300px;
     border-radius: 20px;
@@ -424,7 +422,7 @@ s {
     position: absolute;
     left: 450px;
     top: 20px;
-    background: linear-gradient(to bottom, gray, black);
+    background-color: #505050;
     width: 350px;
     height: 300px;
     border-radius: 20px;
@@ -435,7 +433,7 @@ s {
     position: absolute;
     left: 880px;
     top: 20px;
-    background: linear-gradient(to bottom, gray, black);
+    background-color: #505050;
     width: 350px;
     height: 300px;
     border-radius: 20px;
@@ -446,7 +444,7 @@ s {
     position: absolute;
     left: 20px;
     top: 400px;
-    background: linear-gradient(to bottom, black, gray);
+    background-color: #505050;
     width: 1210px;
     height: 300px;
     border-radius: 20px;
@@ -480,12 +478,6 @@ s {
     height: 400px;
 }
 
-.contacts_social_media_insta_button h4:hover {
-    text-decoration: underline;
-    text-decoration-color: white;
-}
-
-
 .contacts_covering {
     background-color: black;
     width: 1400px;
@@ -518,11 +510,6 @@ s {
 
 .contacts_social_media_whatsapp_button img:hover {
     transform: scale(1.2);
-}
-
-.contacts_social_media_whatsapp_button h4:hover {
-    text-decoration: underline;
-    text-decoration-color: white;
 }
 
 .products_hr {
